--- a/fuzzing/CMakeLists.txt
+++ b/fuzzing/CMakeLists.txt
@@ -1,8 +1,11 @@
 option(ENABLE_FUZZING "Create executables and targets for fuzzing cJSON with afl." Off)
 if (ENABLE_FUZZING)
-    find_program(AFL_FUZZ afl-fuzz)
-    if ("${AFL_FUZZ}" MATCHES "AFL_FUZZ-NOTFOUND")
-        message(FATAL_ERROR "Couldn't find afl-fuzz.")
+    # Find AFL_FUZZ program, use the variable if specified
+    if (NOT AFL_FUZZ)
+        find_program(AFL_FUZZ afl-fuzz)
+    endif()
+    if (NOT AFL_FUZZ)
+        message(FATAL_ERROR "Couldn't find afl-fuzz. Please set AFL_FUZZ path using -DAFL_FUZZ.")
     endif()
 
     add_executable(afl-main afl.c)
@@ -20,9 +23,9 @@ if (ENABLE_FUZZING)
 
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error")
 
-    add_custom_target(afl
-        COMMAND "${AFL_FUZZ}" -i "${CMAKE_CURRENT_SOURCE_DIR}/inputs" -o "${CMAKE_CURRENT_BINARY_DIR}/findings" -x "${CMAKE_CURRENT_SOURCE_DIR}/json.dict" -- "${CMAKE_CURRENT_BINARY_DIR}/afl-main" "@@" "${fuzz_print_parameter}"
-        DEPENDS afl-main)
+    # add_custom_target(afl
+    #     COMMAND "${AFL_FUZZ}" -i "${CMAKE_CURRENT_SOURCE_DIR}/inputs" -o "${CMAKE_CURRENT_BINARY_DIR}/findings" -x "${CMAKE_CURRENT_SOURCE_DIR}/json.dict" -- "${CMAKE_CURRENT_BINARY_DIR}/afl-main" "@@" "${fuzz_print_parameter}"
+    #     DEPENDS afl-main)
 
 
 endif()
